--- a/css/style_parallax.css
+++ b/css/style_parallax.css
@@ -1,7 +1,7 @@
 
 #section1{}
 #section2 {
-	background:url(../img/bg_2.jpg) 50% 0 no-repeat fixed;
+	background:#FFF 50% 0 no-repeat fixed;
 	min-height: 700px;
 	margin: 0 auto;
 	width: 100%;
