--- a/css/component_header.css
+++ b/css/component_header.css
@@ -12,7 +12,7 @@
 
 
 .demo-2 .large-header {
-	background-image: ur('');
+	background-image:url(../img/cover.jpg);
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
