--- a/css/style.css
+++ b/css/style.css
@@ -348,3 +348,11 @@ Main components
 	text-shadow:#999;
 	width:200px;
 }
+#about{
+	line-height:none;
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size:16px;
+	
+	text-align:center;
+}
+	
