--- a/css/component_header.css
+++ b/css/component_header.css
@@ -69,14 +69,16 @@
 	color: #f9f1e9;
 	text-align: center;
 	top: 50%;
-	left: 45%;
+	left: 55%;
 	-webkit-transform: translate3d(-50%,-50%,0);
 	transform: translate3d(-50%,-50%,0);
 	float:left;
 	font-weight: normal;
 	font-size: 1em;
 	padding-left: 10px;
-	text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+	margin-top:50px;
+	width:75%;
+	right:25%;
 	
 	font: 400 1.2em/125% 'Berkshire Swash', Helvetica, Sans-serif;
 }
@@ -93,12 +95,15 @@
 	margin: 0;
 	padding: 0;
 	color: #f9f1e9;
-	text-align: center;
+	text-align:left;
 	top: 0%;
 	left:0%;
+	float:left;
+	margin-bottom:30px;
+	padding-bottom:100px;
 	-webkit-transform: translate3d(-50%,-50%,0);
 	transform: translate3d(-50%,-50%,0);
-	font: 400 2.0em/125% 'Sofia', Helvetica, Sans-serif;
+	font: 2.0em/125% 'Sofia', Helvetica, Sans-serif;
 	
 
  }
