--- a/css/component_header.css
+++ b/css/component_header.css
@@ -66,7 +66,7 @@
 	position: absolute;
 	margin: 0;
 	padding: 0;
-	color: #f9f1e9;
+	color:#000;
 	text-align: center;
 	top: 50%;
 	left: 55%;
@@ -94,7 +94,7 @@
 	position: absolute;
 	margin: 0;
 	padding: 0;
-	color: #f9f1e9;
+	color:#666;
 	text-align:left;
 	top: 0%;
 	left:0%;
@@ -104,6 +104,6 @@
 	-webkit-transform: translate3d(-50%,-50%,0);
 	transform: translate3d(-50%,-50%,0);
 	font: 2.0em/125% 'Sofia', Helvetica, Sans-serif;
-	
+	text-shadow: 2px 2px 4px rgba(0,0,0,0.4)	
 
  }
