--- a/css/style_parallax.css
+++ b/css/style_parallax.css
@@ -91,3 +91,19 @@ article{
 	margin: 0px auto;
 	width: 517px;
 }
+#about{
+	min-height: 700px;
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1920px;
+	position: relative;
+	-webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);
+	box-shadow: 0 0 20px rgba(0,0,0,0.4);
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	
+
+	background:url(../img/bg.jpg) 50% 0 no-repeat fixed;
+}
