--- a/css/component_tab.css
+++ b/css/component_tab.css
@@ -165,9 +165,11 @@
 }
 
 .mediabox img {
-	max-width: 50%;
+	max-width: 80%;
 	display: block;
 	margin: 0 auto;
+	padding-top:10%;
+	padding-bottom:10%;
 }
 
 .mediabox h3 {
