--- a/css/component_header.css
+++ b/css/component_header.css
@@ -32,7 +32,7 @@
 	-webkit-transform: translate3d(-50%,-50%,0);
 	transform: translate3d(-50%,-50%,0);
 	font: 400 4.5em/125% 'Sofia', Helvetica, Sans-serif;
-	
+	text-decoration:underline;
 
  }
 
